add movies working!